# Screenshot_Analyzer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  ScreenshotController.h  appcontroller.cpp  appcontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  screencontroller.cpp  screencontroller.h  screenshotcontroller.cpp
app/dbmanager/: dbmanager.cpp  dbmanager.h
app/widgets/: controlbar.cpp  controlbar.h  tableview.cpp  tableview.h
